--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -3,4 +3,4 @@ readMore: "Read more"
 home: "Home"
 comments: "Comments"
 showComments: "Show Comments"
-footerRef: 'References in footnotes are generally given in condensed form. Complete references can be found <a href="/en/references">HERE</a>.'
+footerRef: "References in footnotes are generally given in condensed form. Complete references can be found <a href='/en/references'>HERE</a>."
