--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -9,4 +9,4 @@ comments:
 showComments:
    "Show Comments"
 footerRef:
-   "References in footnotes are generally given in condensed form. Complete references can be found <a href='/en/references'>HERE</a>."
+   "References in footnotes are generally given in condensed form. Complete references can be found <a href='/references'>HERE</a>."
