--- a/i18n/fr.yaml
+++ b/i18n/fr.yaml
@@ -14,5 +14,5 @@ showComments:
    "Afficher les commentaires"
 
 footerRef:
-   "Les références dans les notes de bas de page sont généralement données sous forme condensée. Les références complètes se trouvent <a href='/fr/references'>ICI</a>."
+   "Les références dans les notes de bas de page sont généralement données sous forme condensée. Les références complètes se trouvent <a href='/references'>ICI</a>."
 
